# fast_rgf

./: CHANGES  CMakeLists.txt  LICENSE  README.md
examples/: README.md
examples/ex1/: run.sh
examples/ex1/inputs/: madelon.test
examples/ex2/: run.sh
examples/ex2/inputs/: config  feature.names  housing.test  housing.train
include/: classifier.h  data.h  discretization.h  dtree.h  forest.h  header.h  utils.h
src/base/: CMakeLists.txt  classifier.cpp  data.cpp  discretization.cpp  utils.cpp
src/exe/: CMakeLists.txt  auc.cpp  discretized_gendata.cpp  discretized_trainer.cpp  forest_predict.cpp  forest_train.cpp  parser.h  test_output.h
src/forest/: CMakeLists.txt  dtree.cpp  dtree_trainer.cpp  feature_mapper.h  forest.cpp  forest_trainer.h  node_trainer.h  training_target.h
